[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/palladium/env_opt.tres" type="Environment" id=1]
[ext_resource path="res://addons/palladium/core/camera.gd" type="Script" id=2]
[ext_resource path="res://addons/palladium/core/culling_rays.gd" type="Script" id=3]
[ext_resource path="res://addons/palladium/core/use_point.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/palladium/core/shader_cache.gd" type="Script" id=5]
[ext_resource path="res://addons/palladium/core/item_preview.gd" type="Script" id=6]
[ext_resource path="res://addons/palladium/core/item_use.gd" type="Script" id=7]
[ext_resource path="res://sound/environment/flashlight_on.ogg" type="AudioStream" id=8]
[ext_resource path="res://sound/environment/flashlight_off.ogg" type="AudioStream" id=9]
[ext_resource path="res://addons/palladium/core/separated_viewport.gd" type="Script" id=10]
[ext_resource path="res://addons/palladium/ui/viewport.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.05, 0.05, 0.05 )

[node name="camera" type="Camera"]
cull_mask = 3073
environment = ExtResource( 1 )
current = true
fov = 55.0
far = 23.0
script = ExtResource( 2 )

[node name="culling_rays" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="culling_rays"]
enabled = true
cast_to = Vector3( 0, 0, -23 )
collision_mask = 18

[node name="Gun_Fire_Points" type="Spatial" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.05 )

[node name="View_Point" type="Spatial" parent="Gun_Fire_Points"]

[node name="ViewArea" type="Area" parent="Gun_Fire_Points/View_Point" groups=[
"view_area",
]]
input_ray_pickable = false

[node name="Collision_Shape" type="CollisionShape" parent="Gun_Fire_Points/View_Point/ViewArea"]
shape = SubResource( 1 )

[node name="use_point" parent="Gun_Fire_Points" instance=ExtResource( 4 )]

[node name="viewpoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77636e-15, 0, -1 )

[node name="shader_cache" type="Spatial" parent="viewpoint"]
script = ExtResource( 5 )

[node name="item_preview" type="Spatial" parent="viewpoint"]
pause_mode = 2
script = ExtResource( 6 )

[node name="item_holder" type="Spatial" parent="viewpoint/item_preview"]

[node name="item_use" type="Spatial" parent="viewpoint"]
script = ExtResource( 7 )

[node name="item_holder" type="Spatial" parent="viewpoint/item_use"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.250116, 0, 0.5 )

[node name="Flashlight" type="Spatial" parent="."]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, -0.8 )
visible = false

[node name="Flashlight" type="SpotLight" parent="Flashlight"]
transform = Transform( 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 33
light_color = Color( 1, 0.913725, 0.768627, 1 )
light_energy = 0.42
light_cull_mask = 4293919777
shadow_color = Color( 0.639216, 0.639216, 0.639216, 1 )
shadow_bias = 0.3
spot_range = 18.0
spot_attenuation = 1.7411
spot_angle = 44.0
spot_angle_attenuation = 2.07053

[node name="OmniLight" type="OmniLight" parent="Flashlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
layers = 33
light_color = Color( 1, 0.913725, 0.768627, 1 )
light_energy = 0.42
light_cull_mask = 4293919777
shadow_color = Color( 0.639216, 0.639216, 0.639216, 1 )
shadow_bias = 0.3
omni_range = 1.5

[node name="CutsceneFlashlight" type="Spatial" parent="."]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, -0.8 )
visible = false

[node name="Flashlight" type="SpotLight" parent="CutsceneFlashlight"]
transform = Transform( 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 33
light_color = Color( 1, 0.913725, 0.768627, 1 )
light_energy = 0.42
light_cull_mask = 4293919777
shadow_color = Color( 0.639216, 0.639216, 0.639216, 1 )
shadow_bias = 0.3
spot_range = 18.0
spot_attenuation = 1.7411
spot_angle = 55.0
spot_angle_attenuation = 2.07053

[node name="OmniLight" type="OmniLight" parent="CutsceneFlashlight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
layers = 33
light_color = Color( 1, 0.913725, 0.768627, 1 )
light_energy = 0.42
light_cull_mask = 4293919777
shadow_color = Color( 0.639216, 0.639216, 0.639216, 1 )
shadow_bias = 0.3
omni_range = 1.5

[node name="AudioStreamFlashlightOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sound"

[node name="AudioStreamFlashlightOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sound"

[node name="separated_viewport" type="ViewportContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 10 )

[node name="dimmer" type="ColorRect" parent="separated_viewport"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.141176, 0.141176, 0.141176, 0.25098 )

[node name="Viewport" type="Viewport" parent="separated_viewport"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 0
gui_disable_input = true
script = ExtResource( 11 )

[node name="Camera" type="Camera" parent="separated_viewport/Viewport"]
cull_mask = 32
current = true
fov = 55.0
far = 5.0
